[Swagger] Models are annotated
